traversal.snake.Snake.scala.error
Compilation error:
Snake:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:11: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            return false
                   ^Snake:15: warning: enclosing method positionFinale has result type Unit: return value discarded
            return false
            ^Snake:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
              return true
                     ^Snake:22: warning: enclosing method positionFinale has result type Unit: return value discarded
              return true
              ^Snake:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
            return false
                   ^Snake:26: warning: enclosing method positionFinale has result type Unit: return value discarded
            return false
            ^Snake:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^Snake:32: warning: enclosing method positionFinale has result type Unit: return value discarded
    return false
    ^Snake:38: error: value unary_! is not a member of Unit
  while(!positionFinale())
        ^